--- a/examples/visualize-wandb.ipynb
+++ b/examples/visualize-wandb.ipynb
@@ -140,7 +140,7 @@
     ")\n",
     "\n",
     "wandb_logger = WandbLogger(\n",
-    "    project=\"lm-eval-harness-integration\", job_type=\"eval\"\n",
+    "    project=\"lm-evaluate-harness-integration\", job_type=\"evaluate\"\n",
     ")  # or empty if wandb.init(...) already called before\n",
     "wandb_logger.post_init(results)\n",
     "wandb_logger.log_eval_result()\n",
